Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ jobs:
   - script: "Do pre-work"
 
 - job: PostWork
-  pool: windows-latest
+  pool:
+    name: windows-latest
   steps:
   - script: "Do post-work using a different hosted image"
