Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,14 +3,10 @@ trigger:
 
 pool: 
   vmImage: ubuntu-latest
+variables:
+  imageName: 'demo-pipelines-docker'
 
 jobs:
 - job: PreWork
   steps:
   - script: "Do pre-work"
-
-- job: PostWork
-  pool:
-    name: windows-latest
-  steps:
-  - script: "Do post-work using a different hosted image"
